--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>GART</title>
-</head>
-<body>
+<html>
+   <head>
+      <meta charset= "utf-8">
+      <meta name= "viewport" content= "width=device-width, initial-scale=1">
+      <title>GART PROJECT</title>
+      <link rel="stylesheet" href="./css/lib/font-awesome.min.css">
+      <link rel="stylesheet" href="./css/lib/bootstrap.min.css">
+      <link rel="stylesheet" href="./css/styles.css">
+   </head>
+   <body>
+      <div id="app-container" class="container-fluid">
+      </div>
 
-</body>
+      </div>
+      <script src = "./js/lib/jquery.min.js" ></script>
+      <script src = "./js/lib/underscore.min.js" ></script>
+      <script src = "./js/lib/backbone.min.js" ></script>
+      <script src = "./js/home-template.js" ></script>
+      <script src = "./js/gallery-template.js"></script>
+      <script src = "./js/artist-template.js"></script>
+      <script src = "./js/galleryShows-template.js"></script>
+      <script src = "./js/auth-template.js"></script>
+      <script src = "./js/showGallery-template.js"></script>
+      <script src = "./js/app.js" ></script>
+   </body>
 </html>
+<!-- <div class="">
+//    <h3>Check the Galleries</h3>
+//    <a type="button" href="#galleries">Go there</a>
+//
+// </div>
+// <div class="">
+//    <h3>Add a new Gallery</h3>
+//
+// </div> -->
