--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <script src = "./js/artist-template.js"></script>
       <script src = "./js/galleryShows-template.js"></script>
       <script src = "./js/auth-template.js"></script>
-      <script src = "./js/showGallery-template.js"></script>
+      <script src = "./js/addGallery-template.js"></script>
       <script src = "./js/app.js" ></script>
    </body>
 </html>
