--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
       <meta charset= "utf-8">
       <meta name= "viewport" content= "width=device-width, initial-scale=1">
       <title>GART PROJECT</title>
+      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
       <link rel="stylesheet" href="./css/lib/font-awesome.min.css">
       <link rel="stylesheet" href="./css/lib/bootstrap.min.css">
       <link rel="stylesheet" href="./css/styles.css">
